--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,9 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
-        "illuminate/support": "^8.0"
+         "php": ">=5.6.0"
     },
-    "require-dev": {
-        "orchestra/testbench": "^6.0",
-        "phpunit/phpunit": "^9.0"
-    },
+
     "autoload": {
         "psr-4": {
             "Moharami\\QueryLogger\\": "src"
